--- a/problem-b/index.html
+++ b/problem-b/index.html
@@ -10,6 +10,47 @@
 </head>
 <body>
 
-
+    <h1>Top 5 Songs For Roshan's 2023 Wrapped</h1>
+    
+    <table>
+        <thead>
+        <th>Rank</th>
+        <th>Artist</th>
+        <th>Title</th>
+        <th>Album</th>
+    </thead>
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>Post Malone</td>
+            <td>Cooped Up</td>
+            <td><a href="https://open.spotify.com/track/32vE1nuG8T9c8bhmZdRY6d?si=5987f6b59cbb40cc" target="_blank"><img src="img/TwelveCaratToothache.jpeg" alt="Twelve Carat Toothache Album Cover"></a></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Post Malone</td>
+            <td>I like You</td>
+            <td><a href="https://open.spotify.com/track/0O6u0VJ46W86TxN9wgyqDj?si=edf19e28204444d2" target="_blank"><img src="img/TwelveCaratToothache.jpeg" alt="Twelve Carat Toothache Album Cover"></a></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Jonas Brothers</td>
+            <td>I Believe</td>
+            <td><a href="https://open.spotify.com/track/1vYh9x8UmFTLbXiizk9Qc5?si=40d7ebe4c6454339" target="_blank"><img src="img/HappinessBegins.jpeg" alt="Happiness Begins Album Cover"></a></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Post Malone</td>
+            <td>I Know</td>
+            <td><a href="https://open.spotify.com/track/6b2mfHMqWCA74XmUuVJm8r?si=6146b461191c4753" target="_blank"><img src="img/HollywoodsBleeding.jpeg" alt="Hollywoods Bleeding Album Cover"></a></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>Metro Boomin</td>
+            <td>Too Many Nights</td>
+            <td><a href="https://open.spotify.com/track/2Hh3ETdQKrmSI3QS0hme7g?si=4810c766b6db43c1" target="_blank"><img src="img/HeroesandVillains.jpeg" alt="Heroes & Villains Album Cover"></a></td>
+        </tr>
+    </tbody>
+    </table>
 </body>
 </html>
